# app/Http/Controllers/Wallet/ReversalController.php
@@ -2,54 +2,64 @@
 
 namespace App\Http\Controllers\Wallet;
 
-use App\Http\Controllers\Accounts\AccountController;
 use App\Http\Controllers\Controller;
-use App\Http\Controllers\Subaccounts\SubaccountController;
-use App\Models\Account\Subaccount;
+use App\Http\Controllers\Accounts\AccountController;
 use App\Models\User;
-use App\Models\Wallet\WalletMovement;
-
+use App\Models\Account\Subaccount;
 use Illuminate\Http\Request;
-use Illuminate\Support\Facades\DB;
+use App\Models\Wallet\WalletMovement;
 use Ramsey\Uuid\Uuid;
+use Illuminate\Support\Facades\DB;
+use App\Http\Controllers\Subaccounts\SubaccountController;
 
 use Exception;
 
-class DepositController extends Controller
+class ReversalController extends Controller
 {
-    public function to_account(Request $request)
+    public function from_account(Request $request)
     {
         try {
             DB::beginTransaction();
 
-            $this->validate_to_account_request($request);
+            $this->validate_from_account_request($request);
             if (!$this->validate_account($request->account_id)) {
                 return self::error('The account does not exist or you do not have permission to access it', 404, new Exception('Account not found'));
             }
 
-            if (WalletMovement::where('Type', 'Deposit')
+            if ($request->amount <= 0) {
+                return self::error('The amount must be greater than 0, even for reversals', 400, new Exception('Invalid amount'));
+            }
+
+
+            if (WalletMovement::where('Type', 'Reversal')
                 ->where('Reference', $request->reference)
                 ->first()
             ) {
-                return self::error('There is already a deposit with the same reference', 400, new Exception('Duplicate reference'));
+                return self::error('There is already a reversal with the same reference', 400, new Exception('Duplicate reference'));
             }
 
             $wallet = AccountController::fixNonAccountWallet($request->account_id);
+
             $wallet_balance = floatval(self::decrypt($wallet->Balance));
+
+            if ($wallet_balance < floatval($request->amount)) {
+                return self::error('The account does not have enough balance to perform the reversal', 400, new Exception('Insufficient balance.'));
+            }
 
             $movement = new WalletMovement();
             $movement->UUID = Uuid::uuid7()->toString();
             $movement->WalletId = $wallet->Id;
             $movement->ApprovedBy = auth()->user()->Id;
-            $movement->Type = 'Deposit';
+            $movement->Type = 'Reversal';
             $movement->Description = $request->description;
-            $movement->Amount = $request->amount;
-            $movement->Balance = floatval($wallet_balance) + floatval($request->amount);
+            $movement->Amount = floatval($request->amount) * -1;
+            $movement->Balance = floatval($wallet_balance) - floatval($request->amount);
             $movement->Reference = $request->reference ?? null;
             $movement->save();
 
-            $wallet->Balance = self::encrypt(floatval($wallet_balance) + floatval($request->amount));
+            $wallet->Balance = self::encrypt(floatval($wallet_balance) - floatval($request->amount));
             $wallet->save();
+
 
             DB::commit();
             return response()->json(WalletController::movement_object($movement), 200);
@@ -59,7 +69,7 @@ class DepositController extends Controller
         }
     }
 
-    private function validate_to_account_request($request)
+    private function validate_from_account_request($request)
     {
         $this->validate($request, [
             'account_id' => 'required',
@@ -73,12 +83,12 @@ class DepositController extends Controller
         return User::where('Id', $id)->where('profile', 'admin_account')->first();
     }
 
-    public function to_subaccount(Request $request)
+    public function from_subaccount(Request $request)
     {
         try {
             DB::beginTransaction();
 
-            $this->validate_to_subaccount_request($request);
+            $this->validate_from_subaccount_request($request);
 
             $subaccount = $this->validate_subaccount($request->subaccount_id);
 
@@ -86,11 +96,11 @@ class DepositController extends Controller
                 return self::error('The sub-account does not exist or you do not have permission to access it', 404, new Exception('Sub-account not found'));
             }
 
-            if (WalletMovement::where('Type', 'Deposit')
+            if (WalletMovement::where('Type', 'Reversal')
                 ->where('Reference', $request->reference)
                 ->first()
             ) {
-                return self::error('There is already a deposit with the same reference', 400, new Exception('Duplicate reference'));
+                return self::error('There is already a reversal with the same reference', 400, new Exception('Duplicate reference'));
             }
 
             $wallet = SubaccountController::fixNonSubaccountWallet($subaccount->AccountId, $subaccount->Id);
@@ -100,14 +110,14 @@ class DepositController extends Controller
             $movement->UUID = Uuid::uuid7()->toString();
             $movement->WalletId = $wallet->Id;
             $movement->ApprovedBy = auth()->user()->Id;
-            $movement->Type = 'Deposit';
+            $movement->Type = 'Reversal';
             $movement->Description = $request->description;
-            $movement->Amount = $request->amount;
-            $movement->Balance = floatval($wallet_balance) + floatval($request->amount);
+            $movement->Amount = floatval($request->amount) * -1;
+            $movement->Balance = floatval($wallet_balance) - floatval($request->amount);
             $movement->Reference = $request->reference ?? null;
             $movement->save();
 
-            $wallet->Balance = self::encrypt(floatval($wallet_balance) + floatval($request->amount));
+            $wallet->Balance = self::encrypt(floatval($wallet_balance) - floatval($request->amount));
             $wallet->save();
 
             DB::commit();
@@ -118,7 +128,7 @@ class DepositController extends Controller
         }
     }
 
-    private function validate_to_subaccount_request($request)
+    private function validate_from_subaccount_request($request)
     {
         $this->validate($request, [
             'subaccount_id' => 'required',
